<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>zh.bookreader</groupId>
	<artifactId>book-reader</artifactId>
	<version>0.1.3-SNAPSHOT</version>

	<modules>
		<module>book-reader-restful-api</module>
		<module>book-reader-data</module>
		<module>book-reader-react-ui</module>
		<module>book-reader-common</module>
		<module>book-reader-onboarding-tool</module>
	</modules>

	<packaging>pom</packaging>

	<name>Book Reader</name>
	<description>A Book Reader project</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.3.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<kotlin.version>1.3.61</kotlin.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<groovy-all.version>3.0.5</groovy-all.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<logback.version>1.2.3</logback.version>
		<maven.javadoc.skip>true</maven.javadoc.skip>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>28.2-jre</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>${groovy-all.version}</version>
				<type>pom</type>
			</dependency>

			<dependency>
				<groupId>zh.bookreader</groupId>
				<artifactId>book-reader-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>zh.bookreader</groupId>
				<artifactId>book-reader-data</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.gmavenplus</groupId>
					<artifactId>gmavenplus-plugin</artifactId>
					<version>1.10.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<goals>install</goals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<useFile>false</useFile>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Spec.java</include>
					</includes>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<scm>
		<developerConnection>scm:git:git@github.com:dzheleznyakov/book-reader.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
</project>
